--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "dispatch": "^1.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.3.4",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
