--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.266.1",
     "aws-sdk": "^2.1311.0",
+    "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "dynamoose": "^3.1.0",
     "express": "^4.18.2",
