trying to make docker work on AWS

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,25 +1,30 @@
 # Fetching the latest node image on alpine linux
 FROM node:alpine AS production
 
-# Declaring env
-ENV NODE_ENV production
+
 
 # Setting up the work directory
 WORKDIR /react-app
 
 # Expose the port that the backend service is running on
-EXPOSE 4000
+# EXPOSE 4000
 
 # Installing dependencies
 COPY ./package.json /react-app
 
-# Remove non-production dependencies
-RUN npm prune --production
-
-RUN npm install --only=production
-
 # Copying all the files in our project
 COPY . .
 
+# RUN npm install --omit=dev
+RUN npm ci
+
+RUN npm run build
+
+# Declaring env
+ENV NODE_ENV production
+
+
+EXPOSE 3000
+
 # Starting our application
-CMD npm start
+CMD npx serve build
