--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,30 +1,23 @@
 # Fetching the latest node image on alpine linux
 FROM node:alpine AS production
 
-
-
 # Setting up the work directory
 WORKDIR /react-app
 
-# Expose the port that the backend service is running on
-# EXPOSE 4000
-
 # Installing dependencies
-COPY ./package.json /react-app
-
-# Copying all the files in our project
-COPY . .
+COPY ./package.json ./
 
 # RUN npm install --omit=dev
-RUN npm ci
-
-RUN npm run build
+RUN npm install
 
 # Declaring env
 ENV NODE_ENV production
 
+#Copy project files. 
+COPY . ./
 
+# Expose the port that the backend service is running on
 EXPOSE 3000
 
 # Starting our application
-CMD npx serve build
+CMD npm start
